<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuQuit"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title="@string/menuQuit" />
    <item android:id="@+id/menuPauseResume"
          android:icon="@android:drawable/ic_media_play" 
          android:title="@string/menuResume" />
    <item android:id="@+id/menuSettings"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menuSettings" />
    <item android:id="@+id/aboutPage"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/menuAbout" />
    <item android:id="@+id/menuLog"
          android:icon="@android:drawable/ic_menu_view"
          android:title="@string/menuLog" />
</menu>
