<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:scrollbars="vertical">   
  <Button android:id="@+id/runTaskButton" 
    android:layout_width="40pt" 
    android:layout_height="wrap_content" 
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    style="@style/CustomButton"
    android:text="Run" />
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/runTaskButton"
    android:measureAllChildren="false">    
  <TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/measurementCreationLayout"
    android:stretchColumns="1">
    <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:textSize="12sp"
        android:gravity="right"
        android:text="@string/measurementTypePrompt"/>
      <LinearLayout
        android:paddingLeft="10pt"
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <Spinner android:id="@+id/measurementTypeSpinner"
          android:layout_width="match_parent"
          android:layout_height="16pt"
          android:prompt="@string/measurementTypePrompt"/>
      </LinearLayout>        
    </TableRow>  
    <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="15pt">  
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:gravity="right"
        android:textSize="12sp"
        android:text="@string/countLabel"/>
      <RelativeLayout 
        android:paddingLeft="10pt">
        <TextView
          android:id="@+id/countText"
          android:layout_width="10pt"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_marginTop="8dip"
          android:paddingRight="4pt"
          android:gravity="right"
          android:textSize="12sp"/>
        <SeekBar android:id="@+id/measurementCountSeekBar"
          android:layout_height="wrap_content"
          android:layout_width="match_parent" 
          android:layout_toRightOf="@id/countText"
          android:max="20"/>
      </RelativeLayout>
    </TableRow>
    <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="15pt">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="4dip"
        android:textSize="12sp"
        android:text="@string/startTimeText"/>
      <LinearLayout
        android:paddingLeft="10pt"
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <EditText android:id="@+id/start_time_text"
          android:layout_width="match_parent"
          android:layout_height="30dip"
          android:gravity="center"
          android:textSize="12sp"/>        
      </LinearLayout>      
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pingView"
        android:paddingTop="15pt">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="4dip"
        android:textSize="12sp"
        android:text="@string/pingTargetLabel"/>     
      <LinearLayout
        android:paddingLeft="10pt"
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <EditText android:id="@+id/pingTargetText"    
          android:layout_height="30dip"
          android:layout_width="match_parent"
          android:hint="@string/pingTargetHint"
          android:inputType="textUri"
          android:lines="1"
          android:textSize="12sp"/>
      </LinearLayout>    
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tracerouteView"
        android:paddingTop="15pt">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="4dip"
        android:textSize="12sp"
        android:text="@string/tracerouteTargetLabel"/>     
      <LinearLayout
        android:paddingLeft="10pt"
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <EditText android:id="@+id/tracerouteTargetText"    
          android:layout_height="30dip"
          android:layout_width="match_parent"
          android:hint="@string/pingTargetHint"
          android:inputType="textUri"
          android:lines="1"
          android:textSize="12sp"/>
      </LinearLayout>    
    </TableRow>
    <TableRow
      android:id="@+id/httpMethodView" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="15pt">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dip"
        android:textSize="12sp"
        android:gravity="right"
        android:text="@string/httpMethodLabel"/>
      <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10pt"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/http_get_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/httpGetRadioText"/>
        <RadioButton android:id="@+id/http_head_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dip"
            android:textSize="12sp"
            android:text="@string/httpHeadRadioText"/>          
      </RadioGroup>
    </TableRow>
    <TableRow
      android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:id="@+id/httpUrlView"
      android:paddingTop="15pt">
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dip"
        android:textSize="12sp"
        android:gravity="right"
        android:text="@string/httpUrlLabel"/>  
      <LinearLayout
        android:paddingLeft="10pt"
        android:orientation="horizontal"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
        <EditText android:id="@+id/httpUrlText"
          android:layout_height="30dip"
          android:layout_width="match_parent"
          android:hint="@string/httpUrlHint"
          android:inputType="textUri"
          android:lines="1"
          android:textSize="10sp"/>
      </LinearLayout>          
    </TableRow>    
  </TableLayout>
  </ScrollView>
</RelativeLayout>